Bug fixed with visibility of content

--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -6,8 +6,10 @@ body {
   background-color: var(--bg);
   font-family: $font-text;
   margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  overflow: auto;
   @include flex(none, center, center);
-  position: relative;
 }
 
 .main {
