--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -146,7 +146,7 @@
   }
 
   @media (min-width: map-get($breakpoints, "xl")) {
-    bottom: 13px;
+    bottom: 6px;
     font-size: 12px;
     right: 18px;
   }
